--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "cSpell.language": "en,en-GB,en-US",
-  "cSpell.enableFiletypes": ["solidity"]
+  "cSpell.enableFiletypes": ["solidity"],
+  "cSpell.words": ["struct"]
 }
