--- a/package.json
+++ b/package.json
@@ -3,16 +3,31 @@
   "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "hardhat test",
+    "build": "hardhat compile",
+    "clean": "hardhat clean"
+  },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.3",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@types/chai-as-promised": "^7.1.5",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "chai-shallow-deep-equal": "^1.4.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
     "hardhat": "^2.7.0",
-    "typescript": "^4.3.5"
+    "mocha": "^9.2.1",
+    "ts-mocha": "^9.0.2",
+    "ts-node": "^10.6.0",
+    "tsconfig-paths": "^3.13.0",
+    "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.21",
     "solc": "^0.8.10"
   }
 }
