--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
+    // "noEmit": true,
+    "declaration": true,
+    "outDir": "./build",
     "esModuleInterop": true,
     "module": "CommonJS",
     "moduleResolution": "Node",
