--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,5 +34,5 @@
     "exactOptionalPropertyTypes": true
   },
   "include": ["./**/*.ts", "./**/*.spec.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "build"]
 }
